cmake_minimum_required(VERSION 3.9)
project(IndoorDetectRepo)

set(CMAKE_CXX_STANDARD 11)

include_directories(
        src/
        src/common/
        "C:\\ti\\mmwave_sdk_03_01_01_02\\packages"
        "C:\\ti\\xdctools_3_51_01_18_core\\packages"
        "C:\\ti\\bios_6_73_01_01\\packages"
        )

add_executable(IndoorDetectRepo
        src/common/modules/classification/classificationUtilities/src/RADARDEMO_distanceUtil_priv.c
        src/common/modules/classification/classificationUtilities/src/RADARDEMO_distanceUtil_priv.h
        src/common/modules/classification/classificationUtilities/src/RADARDEMO_featExtrUtil_priv.c
        src/common/modules/classification/classificationUtilities/src/RADARDEMO_featExtrUtil_priv.h
        src/common/modules/classification/classificationUtilities/src/RADARDEMO_svmKernelUtil_priv.c
        src/common/modules/classification/classificationUtilities/src/RADARDEMO_svmKernelUtil_priv.h
        src/common/modules/classification/classifier_kNN/api/RADARDEMO_classifierCommon.h
        src/common/modules/classification/classifier_kNN/api/RADARDEMO_classifierkNN.h
        src/common/modules/classification/classifier_kNN/api/RADARDEMO_classifierSVM.h
        src/common/modules/classification/classifier_kNN/src/RADARDEMO_classifierkNN.c
        src/common/modules/classification/classifier_kNN/src/RADARDEMO_classifierkNN_priv.h
        src/common/modules/classification/classifier_kNN/src/RADARDEMO_classifierkNNCB.c
        src/common/modules/classification/classifier_kNN/src/RADARDEMO_classifierSVM.c
        src/common/modules/classification/classifier_kNN/src/RADARDEMO_classifierSVM_priv.h
        src/common/modules/classification/classifier_kNN/utils/classifierkNN_process.c
        src/common/modules/classification/classifier_kNN/utils/classifierkNN_process.h
        src/common/modules/classification/classifier_kNN/utils/Util_ClassifierkNN_inputParser.c
        src/common/modules/classification/classifier_kNN/utils/Util_ClassifierkNN_inputParser.h
        src/common/modules/classification/classifier_kNN/utils/Util_ClassifierkNN_targetManager.c
        src/common/modules/classification/classifier_kNN/utils/Util_ClassifierkNN_targetManager.h
        src/common/modules/classification/classifier_kNN/utils/Util_input_message.h
        src/common/modules/classification/featureExtraction/api/RADARDEMO_featExtraction.h
        src/common/modules/classification/featureExtraction/src/RADARDEMO_featExtract.c
        src/common/modules/classification/featureExtraction/src/RADARDEMO_featExtract_priv.h
        src/common/modules/detection/CFAR/api/RADARDEMO_detectionCFAR.h
        src/common/modules/detection/CFAR/src/RADARDEMO_detectionCFAR.c
        src/common/modules/detection/CFAR/src/RADARDEMO_detectionCFAR_priv.c
        src/common/modules/detection/CFAR/src/RADARDEMO_detectionCFAR_priv.h
        src/common/modules/detection/CFAR/src/relativeThrTab.c
        src/common/modules/DoA/CaponBF/api/RADARDEMO_aoaEstCaponBF.h
        src/common/modules/DoA/CaponBF/src/RADARDEMO_aoaEstCaponBF.c
        src/common/modules/DoA/CaponBF/src/RADARDEMO_aoaEstCaponBF_DopplerEst.c
        src/common/modules/DoA/CaponBF/src/RADARDEMO_aoaEstCaponBF_heatmapEst.c
        src/common/modules/DoA/CaponBF/src/RADARDEMO_aoaEstCaponBF_matrixInv.c
        src/common/modules/DoA/CaponBF/src/RADARDEMO_aoaEstCaponBF_priv.h
        src/common/modules/rangeProc/rangeProc/api/RADARDEMO_rangeProc.h
        src/common/modules/rangeProc/rangeProc/src/RADARDEMO_rangeProc.c
        src/common/modules/rangeProc/rangeProc/src/RADARDEMO_rangeProc_priv.c
        src/common/modules/rangeProc/rangeProc/src/RADARDEMO_rangeProc_priv.h
        src/common/modules/rangeProc/rangeProc/src/RADARDEMO_rangeProc_utils.c
        src/common/modules/utilities/cycle_measure.c
        src/common/modules/utilities/cycle_measure.h
        src/common/modules/utilities/radar_c674x.h
        src/common/modules/utilities/radarOsal_malloc.c
        src/common/modules/utilities/radarOsal_malloc.h
        src/common/cplx_types.h
        src/common/edmaTransfer.c
        src/common/edmaTx.h
        src/common/mmw_config.h
        src/common/mmw_messages.h
        src/common/mmw_output.h
        src/common/radarProcess.c
        src/common/radarProcess.h
        src/dss/dss_config_edma_util.c
        src/dss/dss_config_edma_util.h
        src/dss/dss_data_path.c
        src/dss/dss_data_path.h
        src/dss/dss_main.c
        src/dss/dss_mmw.h
        src/dss/edmaTransfer.c
        src/dss/edmaTx.h
        src/dss/radar_test.c
        src/dss/radar_test.h
        src/dss/radarProcess.c
        src/dss/radarProcess.h
        src/dss/swpform.h
        src/mss/gtrack/include/gtrack_2d.h
        src/mss/gtrack/include/gtrack_3d.h
        src/mss/gtrack/include/gtrack_int.h
        src/mss/gtrack/include/gtrack_listlib.h
        src/mss/gtrack/src/gtrack_create.c
        src/mss/gtrack/src/gtrack_delete.c
        src/mss/gtrack/src/gtrack_listlib.c
        src/mss/gtrack/src/gtrack_math.c
        src/mss/gtrack/src/gtrack_module.c
        src/mss/gtrack/src/gtrack_step.c
        src/mss/gtrack/src/gtrack_unit_create.c
        src/mss/gtrack/src/gtrack_unit_delete.c
        src/mss/gtrack/src/gtrack_unit_event.c
        src/mss/gtrack/src/gtrack_unit_get.c
        src/mss/gtrack/src/gtrack_unit_predict.c
        src/mss/gtrack/src/gtrack_unit_report.c
        src/mss/gtrack/src/gtrack_unit_score.c
        src/mss/gtrack/src/gtrack_unit_start.c
        src/mss/gtrack/src/gtrack_unit_stop.c
        src/mss/gtrack/src/gtrack_unit_update.c
        src/mss/gtrack/src/gtrack_utilities.c
        src/mss/gtrack/src/gtrack_utilities_2d.c
        src/mss/gtrack/src/gtrack_utilities_3d.c
        src/mss/gtrack/test/common/gtrackAlloc.c
        src/mss/gtrack/test/common/gtrackApp.c
        src/mss/gtrack/test/common/gtrackLog.c
        src/mss/gtrack/test/common/testlimits.h
        src/mss/gtrack/test/usecases/dss/main_dss.c
        src/mss/gtrack/test/usecases/mss/main_mss.c
        src/mss/gtrack/gtrack.h
        src/mss/cli.c
        src/mss/gtrack_filter.c
        src/mss/gtrack_filter.h
        src/mss/gtrackAlloc.c
        src/mss/gtrackLog.c
        src/mss/mss_main.c
        src/mss/mss_mmw.h
        src/mss/swpform.h
        src/mss/task_app.c
        src/mss/task_mbox.c)
